# notso-smollm3-bot

./: .gitignore  CLEANUP_REPORT.md  Cargo.toml  IMPLEMENTATION_TEST.md  PERFORMANCE_ANALYSIS.md  PROJECT_STATUS.md  README.md  SESSION_TEMPLATE.md  analyze_warnings.sh  analyze_warnings_detailed.sh  build.sh  build_and_test.sh  check_build.sh  check_cargo_run.sh  check_compile.sh  check_errors.sh  clean_build.sh  cleanup_warnings.sh  compile_test.sh  debug_shape.sh  final_check.sh  find_error.sh  fix_compilation.sh  fix_warnings.sh  inspect_gguf.py  make_all_executable.sh  make_executable.sh  quick_build_test.sh  quick_check.sh  quick_test.sh  remove_bin.sh  remove_bin_dir.sh  run.sh  run_inspections.sh  run_stub.sh  run_test.sh  run_ui_test.sh  test_build.sh  test_build_and_run.sh  test_cargo.sh  (+12 more)
.cargo/: config.toml
doc/: CANDLE_GENERATION_FIX.md  GENERATION_CONTEXT.md  HTMX_SSE_Final_Solution.md  HTMX_SSE_Migration.md  HTMX_SSE_Streaming_Solution.md  NEXT_CONVERSATION_CONTEXT.md  Pure_HTMX_SSE_Implementation.md  README.md  SSE_Streaming_Refactoring_Notes.md  architecture.md  batch_encoding_implementation.md  candle_reference.md  compilation_fixes.md  draft_q4km_loader.rs.txt  example_candle.rs_inference.rs  generation_fix_summary.md  gguf_inspection_report.md  gguf_integration_progress.md  gguf_integration_status.md  implementation_status.md  latest-tech-stack-2025.md  latest_optimization_final_guide.md  markdown-rendering-fix.md  model_loading_reference.md  muse.md  nope_customop_implementation.md  nope_implementation_complete.md  nope_layer_verification.md  nope_model_implementation.md  q4km_implementation.md  q4km_loading_status.md  qmatmul_fix_implementation.md  response-buffer-testing.md  routing-architecture.md  shape_mismatch_fix.md  slash-commands.md  smollm3_architecture.md  strftime_now_fix.md  tokenizer_complete_documentation.md  tokenizer_configuration_fix.md  (+3 more)
models/: .gitkeep  README.md  download.sh
scripts/: setup_cuda.sh  test_compile.sh
src/: cache.rs  config.rs  handlers.rs  inference.rs  lib.rs  main.rs  model.rs  state.rs  templates.rs  tokenizer.rs
src/inference/: engine.rs  generation.rs  mod.rs
src/inference/candle/: device.rs  kv_cache.rs  mod.rs  model_loader.rs  quantized_ops.rs  tensor_ops.rs
src/services/: metrics.rs  mod.rs  session.rs  streaming.rs
src/services/ml/: enhanced_service.rs  mod.rs  service.rs
src/services/ml/official/: config.rs  device.rs  gguf_loader.rs  llama_forward.rs  loader.rs  mod.rs  model.rs  quantized_model.rs
src/services/ml/smollm3/: adapter.rs  chat_template.rs  config.rs  generation.rs  kv_cache.rs  mod.rs  nope_layers.rs  nope_model.rs  stub_mode.rs  thinking.rs  tokenizer.rs  tokenizer_ext.rs
src/services/ml/streaming/: buffer.rs  events.rs  mod.rs  pipeline.rs
src/services/streaming/: buffer.rs  mod.rs  sse_handler.rs
src/services/template/: chat.rs  engine.rs  mod.rs  streaming.rs
src/smollm3/: chat_template.rs  config.rs  mod.rs  model.rs  tokenizer.rs
src/types/: errors.rs  events.rs  message.rs  mod.rs  session.rs
src/web/: mod.rs  routes.rs  server.rs  sse.rs
src/web/handlers/: api.rs  api_pure_htmx.rs  chat.rs  commands.rs  health.rs  mod.rs  quote.rs  sse_html.rs
src/web/static/css/: chat-input.css  chat-minimal.css  chat.css  main.css  markdown.css  slash-commands.css  streaming.css
src/web/static/js/: chat-debug.js  chat-streaming.js  chat.js  slash-commands.js
src/web/templates/: base.html  chat-streaming.html  chat.html  chat_htmx_alpine.html  chat_pure_htmx.html  chat_smooth_streaming.html  chat_with_commands.html  chat_zero_js.html  index.html
src/web/templates/components/: chat_container.html  message_input.html
src/web/templates/components/message/: container.html  final.html  stream_chunk.html
static/css/: main.css
static/js/: minimal.js
templates/: smollm3_official.j2
templates/components/: message.html
test_compile/: check_compile.sh  check_compile2.sh
